Botao shiny implementado

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <main>
         <!-- Campo de pesquisa por número de Pokémon -->
         <div class="pesquisa-pokemon" id="pesquisaPokemon">
-            <h2>Pesquisar Pokémon por Número</h2>
+            <h2>Pesquisar Pokémon pelo seu número</h2>
             <form id="pokemonSearchForm">
                 <label for="pokemonNumber">Número do Pokémon:</label>
-                <input type="number" id="pokemonNumber" name="pokemonNumber" min="1" max="1080">
+                <input type="number" id="pokemonNumber" name="pokemonNumber" min="1" max="1025">
                 <button type="submit">Pesquisar</button>
             </form>
         </div>
