adicionado um span para mostrar qual geração de pokemon esta

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <button class="botao-geracao" data-geracao="8">8ª Geração</button>
         </div>
 
+        <!-- Span para exibir a geração atual -->
+        <div class="geracao-atual" id="geracaoAtual" style="display: none;">Geração 1</div>
+
+
         <!-- Lista de Pokémon por geração -->
         <div class="lista-pokemon">
             <!-- Lista de Pokémon de cada geração será exibida aqui -->
